# rust-dapp-example

./: Makefile  README.md  justfile
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: main.rs
api/utils/: Cert.json
foundry/: README.md
foundry/script/: Cert.s.sol
foundry/src/: Cert.sol
foundry/test/: Cert.t.sol
