[package]
name = "api"
version = "0.1.0"
edition = "2021"
default-run = "api"

[dependencies]
alloy = { version = "0.14", features = ["full"] }
axum = { version = "0.8.3", features = ["tracing"] }
eyre = "0.6.12"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
tower-http = { version = "0.6.2", features = ["add-extension", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.3"
mime = "0.3.17"
serde_json = "1.0"
tower = { version = "0.5.2", features = ["util"] }
